// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/tabs/demo/basic.md correctly 1`] = `
<div>
  <div
    class="am-tabs am-tabs-horizontal am-tabs-top"
  >
    <div
      class="am-tabs-tab-bar-wrap"
    >
      <div
        class="am-tabs-default-bar am-tabs-default-bar-animated am-tabs-default-bar-top"
        style="background-color:#fff;"
      >
        <div
          class="am-tabs-default-bar-content"
          style="touch-action:pan-y;"
        >
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%;"
          >
            <span
              class="am-badge"
            >
              First Tab
              <sup
                class="am-badge-text"
              >
                3
              </sup>
            </span>
          </div>
          <div
            class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
            style="width:33.333333333333336%;"
          >
            <span
              class="am-badge"
            >
              Second Tab
              <sup
                class="am-badge-text"
              >
                今日(20)
              </sup>
            </span>
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%;"
          >
            <span
              class="am-badge"
            >
              Third Tab
              <sup
                class="am-badge-dot"
              />
            </span>
          </div>
          <div
            class="am-tabs-default-bar-underline"
            style="width:33.333333333333336%;left:33.333333333333336%;"
          />
        </div>
      </div>
    </div>
    <div
      class="am-tabs-content-wrap am-tabs-content-wrap-animated"
      style="touch-action:pan-y;transform:translate3d(-100%, 0px, 0px);-webkit-transform:translate3d(-100%, 0px, 0px);-moz-transform:translate3d(-100%, 0px, 0px);"
    >
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff;"
        >
          Content of First Tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff;"
        >
          Content of Second Tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff;"
        >
          Content of Third Tab
        </div>
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-tabs am-tabs-horizontal am-tabs-bottom"
  >
    <div
      class="am-tabs-content-wrap am-tabs-content-wrap-animated"
      style="touch-action:pan-y;transform:translate3d(-100%, 0px, 0px);-webkit-transform:translate3d(-100%, 0px, 0px);-moz-transform:translate3d(-100%, 0px, 0px);"
    >
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff;"
        >
          Content of First Tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff;"
        >
          Content of Second Tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:150px;background-color:#fff;"
        >
          Content of Third Tab
        </div>
      </div>
    </div>
    <div
      class="am-tabs-tab-bar-wrap"
    >
      <div
        class="am-tabs-default-bar am-tabs-default-bar-animated am-tabs-default-bar-bottom"
        style="background-color:#fff;"
      >
        <div
          class="am-tabs-default-bar-content"
          style="touch-action:pan-y;"
        >
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%;"
          >
            <span>
              First Tab-1
            </span>
          </div>
          <div
            class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
            style="width:33.333333333333336%;"
          >
            <span>
              Second Tab-2
            </span>
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%;"
          >
            <span>
              Third Tab-3
            </span>
          </div>
          <div
            class="am-tabs-default-bar-underline"
            style="width:33.333333333333336%;left:33.333333333333336%;"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;

exports[`renders ./components/tabs/demo/fixedheight.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    style="height:200px;"
  >
    <div
      class="am-tabs am-tabs-horizontal am-tabs-top"
    >
      <div
        class="am-tabs-tab-bar-wrap"
      >
        <div
          class="am-tabs-default-bar am-tabs-default-bar-animated am-tabs-default-bar-top"
          style="background-color:#fff;"
        >
          <div
            class="am-tabs-default-bar-content"
            style="touch-action:pan-y;"
          >
            <div
              class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
              style="width:33.333333333333336%;"
            >
              First Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:33.333333333333336%;"
            >
              Second Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:33.333333333333336%;"
            >
              Third Tab
            </div>
            <div
              class="am-tabs-default-bar-underline"
              style="width:33.333333333333336%;left:0%;"
            />
          </div>
        </div>
      </div>
      <div
        class="am-tabs-content-wrap am-tabs-content-wrap-animated"
        style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);"
      >
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
        >
          <div
            style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff;"
          >
            Content of First Tab
          </div>
        </div>
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        >
          <div
            style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff;"
          >
            Content of Second Tab
          </div>
        </div>
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/mutlitabs.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    style="height:400px;"
  >
    <div
      class="am-tabs am-tabs-horizontal am-tabs-top"
    >
      <div
        class="am-tabs-tab-bar-wrap"
      >
        <div
          class="am-tabs-default-bar am-tabs-default-bar-animated am-tabs-default-bar-top"
          style="background-color:#fff;"
        >
          <div
            class="am-tabs-default-bar-content"
            style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);"
          >
            <div
              class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
              style="width:20%;"
            >
              1st Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:20%;"
            >
              2nd Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:20%;"
            >
              3rd Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:20%;"
            >
              4th Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:20%;"
            >
              5th Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:20%;"
            >
              6th Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:20%;"
            >
              7th Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:20%;"
            >
              8th Tab
            </div>
            <div
              class="am-tabs-default-bar-tab"
              style="width:20%;"
            >
              9th Tab
            </div>
            <div
              class="am-tabs-default-bar-underline"
              style="width:20%;left:0%;"
            />
          </div>
          <div
            class="am-tabs-default-bar-nextpage"
          />
        </div>
      </div>
      <div
        class="am-tabs-content-wrap am-tabs-content-wrap-animated"
        style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);"
      >
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
        >
          <div
            style="background-color:#fff;"
          >
            <p
              style="padding:20px;margin:0;text-align:center;"
            >
              Content of 1st Tab 50
            </p>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 0
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 1
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 2
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 3
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 4
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 5
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 6
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 7
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 8
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 9
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 10
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 11
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 12
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 13
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 14
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 15
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 16
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 17
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 18
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 19
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 20
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 21
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 22
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 23
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 24
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 25
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 26
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 27
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 28
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 29
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 30
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 31
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 32
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 33
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 34
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 35
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 36
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 37
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 38
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 39
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 40
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 41
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 42
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 43
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 44
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 45
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 46
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 47
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 48
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 49
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        >
          <div
            style="background-color:#fff;"
          >
            <p
              style="padding:20px;margin:0;text-align:center;"
            >
              Content of 2nd Tab 5
            </p>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 0
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 1
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 2
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Meet hotel
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/dKbkpPXKfvZzWCM.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 3
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                McDonald's invites you
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/XmwCzSeJiqpkuMB.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 4
                  </div>
                </div>
              </div>
            </div>
            <div
              class="row"
            >
              <div
                class="row-title"
              >
                Eat the week
              </div>
              <div
                style="display:flex;padding:15px 0;"
              >
                <img
                  alt="icon"
                  src="https://zos.alipayobjects.com/rmsportal/hfVtzEhPzTUewPm.png"
                  style="height:64px;margin-right:15px;"
                />
                <div
                  class="row-text"
                >
                  <div
                    style="margin-bottom:8px;font-weight:bold;"
                  >
                    不是所有的兼职汪都需要风吹日晒
                  </div>
                  <div>
                    <span
                      style="font-size:30px;color:#FF6E27;"
                    >
                      35
                    </span>
                    ¥ 5
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        />
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        />
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        />
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        />
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        />
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        />
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders ./components/tabs/demo/noanim.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div
    class="am-tabs am-tabs-horizontal am-tabs-top"
  >
    <div
      class="am-tabs-tab-bar-wrap"
    >
      <div
        class="am-tabs-default-bar am-tabs-default-bar-top"
        style="background-color:#fff;"
      >
        <div
          class="am-tabs-default-bar-content"
          style="touch-action:pan-y;"
        >
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%;"
          >
            First Tab
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="width:33.333333333333336%;"
          >
            Second Tab
          </div>
          <div
            class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
            style="width:33.333333333333336%;"
          >
            Third Tab
          </div>
          <div
            class="am-tabs-default-bar-underline"
            style="width:33.333333333333336%;left:66.66666666666667%;"
          />
        </div>
      </div>
    </div>
    <div
      class="am-tabs-content-wrap"
      style="touch-action:pan-y;transform:translate3d(-200%, 0px, 0px);-webkit-transform:translate3d(-200%, 0px, 0px);-moz-transform:translate3d(-200%, 0px, 0px);"
    >
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      />
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff;"
        >
          Content of Second Tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff;"
        >
          Content of Third Tab
        </div>
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;

exports[`renders ./components/tabs/demo/sticky.md correctly 1`] = `
<div>
  <div
    class="am-whitespace am-whitespace-md"
  />
  <div>
    <div
      class="am-tabs am-tabs-horizontal am-tabs-top"
    >
      <div
        class="am-tabs-tab-bar-wrap"
      >
        <div>
          <div
            style="padding-bottom:0;"
          />
          <div
            class=""
            style="transform:translateZ(0);z-index:1;"
          >
            <div
              class="am-tabs-default-bar am-tabs-default-bar-animated am-tabs-default-bar-top"
              style="background-color:#fff;"
            >
              <div
                class="am-tabs-default-bar-content"
                style="touch-action:pan-y;"
              >
                <div
                  class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
                  style="width:33.333333333333336%;"
                >
                  First Tab
                </div>
                <div
                  class="am-tabs-default-bar-tab"
                  style="width:33.333333333333336%;"
                >
                  Second Tab
                </div>
                <div
                  class="am-tabs-default-bar-tab"
                  style="width:33.333333333333336%;"
                >
                  Third Tab
                </div>
                <div
                  class="am-tabs-default-bar-underline"
                  style="width:33.333333333333336%;left:0%;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="am-tabs-content-wrap am-tabs-content-wrap-animated"
        style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);"
      >
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
        >
          <div
            style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff;"
          >
            Content of First Tab
          </div>
        </div>
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        >
          <div
            style="display:flex;align-items:center;justify-content:center;height:250px;background-color:#fff;"
          >
            Content of Second Tab
          </div>
        </div>
        <div
          class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
        />
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;

exports[`renders ./components/tabs/demo/vertical.md correctly 1`] = `
<div
  style="height:200px;"
>
  <div
    class="am-tabs am-tabs-vertical am-tabs-left"
  >
    <div
      class="am-tabs-tab-bar-wrap"
    >
      <div
        class="am-tabs-default-bar am-tabs-default-bar-animated am-tabs-default-bar-left"
        style="background-color:#fff;"
      >
        <div
          class="am-tabs-default-bar-content"
          style="touch-action:pan-x;"
        >
          <div
            class="am-tabs-default-bar-tab"
            style="height:33.333333333333336%;"
          >
            First
          </div>
          <div
            class="am-tabs-default-bar-tab am-tabs-default-bar-tab-active"
            style="height:33.333333333333336%;"
          >
            Second
          </div>
          <div
            class="am-tabs-default-bar-tab"
            style="height:33.333333333333336%;"
          >
            Third
          </div>
          <div
            class="am-tabs-default-bar-underline"
            style="height:33.333333333333336%;top:33.333333333333336%;"
          />
        </div>
      </div>
    </div>
    <div
      class="am-tabs-content-wrap am-tabs-content-wrap-animated"
      style="touch-action:pan-x;transform:translate3d(0px, -100%, 0px);-webkit-transform:translate3d(0px, -100%, 0px);-moz-transform:translate3d(0px, -100%, 0px);"
    >
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:200px;background-color:#fff;"
        >
          Content of First Tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-active"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:200px;background-color:#fff;"
        >
          Content of Second Tab
        </div>
      </div>
      <div
        class="am-tabs-pane-wrap am-tabs-pane-wrap-inactive"
      >
        <div
          style="display:flex;align-items:center;justify-content:center;height:200px;background-color:#fff;"
        >
          Content of Third Tab
        </div>
      </div>
    </div>
  </div>
  <div
    class="am-whitespace am-whitespace-md"
  />
</div>
`;
